Added new html and css elements

--- a/Home.html
+++ b/Home.html
@@ -4,36 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="Home.css">
 </head>
 <body>
 
-    <header>
-        <div class="headr">
-            <img src="" alt="Home button" id="">
-            <h1>Joeford Torculas's Portfolio</h1>
-        </div>
-        <div name="navigation_buttons">
-            <ul>
-                <li>
+    <header class="headr">
+        <div class="flexheadr">
+            <div class="leftheadr">
+                <h1>Joeford's Portfolio</h1>
+            </div>
+            <div class="flexrightheadr">
+                <div class="rightheadr">
                     <button onclick="scrollToSection('Projects')">Projects</button>
-                </li>
-                <li>
                     <a href="">About Me</a>
-                </li>
-                <li>
                     <a href="">Contact</a>
-                </li>
-            </ul>
+                </div>
+            </div>
+            
         </div>
     </header>
 
-    <section id="Projects">
-        <div id="" class="bgbx">
-            <ul> <!--this should have multiple boxes that describe each project--></ul>
-        </div>
-    </section>
+    <div class="bodysection">
+        <div class="bodybg">
 
-    <footer id="footer">
+            <section id="Projects">
+                <div id="" class="bgbx">
+                    <ul> <!--this should have multiple boxes that describe each project--></ul>
+                    <li>project 1</li>
+                    <li>project 1</li>
+                    <li>project 1</li>
+                    <li>project 1</li>
+                    <li>project 1</li>
+                </div>
+            </section>
+
+
+        </div>
+    </div>
+
+    <footer class="footer" id="footer">
         <h1>Contact Informatioin</h1>
         <p>Name</p>
         <p>Number</p>
