--- a/Home.html
+++ b/Home.html
@@ -13,6 +13,7 @@
             <div class="leftheadr">
                 <h1>Joeford's Portfolio</h1>
             </div>
+
             <div class="flexrightheadr">
                 <div class="rightheadr">
                     <button onclick="scrollToSection('Projects')">Projects</button>
@@ -20,14 +21,18 @@
                     <a href="">Contact</a>
                 </div>
             </div>
-            
         </div>
     </header>
 
     <div class="bodysection">
         <div class="bodybg">
 
+            <section id="Introduction">
+                <div></div>
+            </section>
+
             <section id="Projects">
+                <h1>Projects</h1>
                 <div id="" class="bgbx">
                     <ul> <!--this should have multiple boxes that describe each project--></ul>
                     <li>project 1</li>
@@ -43,7 +48,7 @@
     </div>
 
     <footer class="footer" id="footer">
-        <h1>Contact Informatioin</h1>
+        <h1>Contact Information</h1>
         <p>Name</p>
         <p>Number</p>
         <p>email</p>
@@ -53,3 +58,4 @@
     <script src="Home.js"></script>
 </body>
 </html>
+
